nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: mundose
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: szebastian001/front-pinfinal:cambiartag
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-metrics
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:0.9.0
          args:
            - -nginx.scrape-uri=http://localhost:8088/stub_status
          ports:
            - containerPort: 9113
          volumeMounts:
            - name: nginx-metrics
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m"
      volumes:
        - name: nginx-metrics
          configMap:
            name: nginx-metrics-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mundose
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
