nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: mundose
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: front-pinfinal.com
      http:
        paths:
          - path: /services/nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
